--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -1,1 +1,48 @@
-<p>github works!</p>
+
+<div class="containerfluid">
+    <div class="row">
+        <div class="col-md-12">
+            <app-navbar></app-navbar>
+        </div>
+        <div class="col-md-6">
+            
+        </div>
+    </div>
+</div>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{ user.avatar_url }}" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title" *ngIf="user.name"> Name: {{ user.name}}</h5>
+                  <p class="card-text">Username: {{ user.login }}</p>
+                  <a href="{{user.html_url}}" class="btn btn-primary">check Github</a>
+                </div>
+              </div><br>
+            
+            </div>
+            <div class="col-md-6">
+                    <button class="btn btn-primary"> Following: {{user.following}}</button><br><br>
+                
+                   <button class="btn btn-warning"> followers: {{user.followers}}</button>
+            </div>
+        <br>
+
+    </div>
+    <div class="row" >
+        <div class="col-md-3 pb-3" *ngFor="let repos of repo" >
+            <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title font-weight-bold">{{repos.name}}</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Created at:{{user.created_at|date}} </h6>
+                  <p class="card-text">{{repos.description}}</p>
+                  
+                  <a href="{{user.html_url}}" class="card-link">Click here</a>
+                </div>
+              </div>
+        </div>
+    
+    </div>
+</div>
