--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -5,7 +5,7 @@
             <app-navbar></app-navbar>
         </div>
         <div class="col-md-6">
-            
+            <app-form></app-form>
         </div>
     </div>
 </div>
