--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                   <h5 class="card-title" *ngIf="user.name"> Name: {{ user.name}}</h5>
                   <p class="card-text">Username: {{ user.login }}</p>
-                  <a href="{{user.html_url}}" class="btn btn-primary">check Github</a>
+                  <a href="{{user.html_url}}" target="_blank" class="btn btn-primary">check Github</a>
                 </div>
               </div><br>
             
@@ -36,10 +36,10 @@
             <div class="card">
                 <div class="card-body">
                   <h5 class="card-title font-weight-bold">{{repos.name}}</h5>
-                
+                  
                   <p class="card-text">{{repos.description}}</p>
                   
-                  <a href="{{user.html_url}}" class="card-link">Click here</a>
+                  <a href="{{repos.html_url}}"  target="_blank"  class="card-link">Click here</a>
                 </div>
               </div>
         </div>
